syntax = "proto3";

package org.project_planton.provider.gcp.gcpcloudfunction.v1;

// GcpCloudFunctionStackOutputs contains the output values from a deployed Cloud Function.
// These outputs provide essential information about the deployed function, including
// its URL, identity, and status.
message GcpCloudFunctionStackOutputs {
  // The fully qualified resource name of the deployed function.
  // Format: projects/{project}/locations/{region}/functions/{function-name}
  // Example: "projects/my-project/locations/us-central1/functions/my-function"
  string function_id = 1;

  // The HTTPS URL of the function. Only populated for HTTP-triggered functions.
  // For event-driven functions, this field is empty.
  // Example: "https://us-central1-my-project.cloudfunctions.net/my-function"
  string function_url = 2;

  // The email of the service account that the function runs as.
  // This is the runtime identity of the function.
  // Format: "{service-account-id}@{project}.iam.gserviceaccount.com"
  string service_account_email = 3;

  // The current state of the function.
  // Possible values: "ACTIVE", "OFFLINE", "DEPLOY_IN_PROGRESS", "DELETE_IN_PROGRESS", "UNKNOWN"
  string state = 4;

  // The Cloud Run service name (Gen 2 functions are deployed as Cloud Run services).
  // This can be used to access the function via Cloud Run APIs if needed.
  // Format: "projects/{project}/locations/{region}/services/{service-name}"
  string cloud_run_service_id = 5;

  // The Eventarc trigger ID for event-driven functions.
  // Only populated for functions with EVENT_TRIGGER type.
  // Format: "projects/{project}/locations/{region}/triggers/{trigger-name}"
  string eventarc_trigger_id = 6;
}
